@@ -28,6 +28,10 @@
 ### Computer
 
  * [Install-SmbShare](http://get-carbon.org/help/Install-SmbShare.html) can't find `net.exe` when running as part of a Windows logon script.  Thanks to Paul Aage Aasheim for identifying and reporting this bug.  All usages of the `net.exe` application were updated to use the new [Resolve-NetPath](http://get-carbon.org/help/Resolve-NetPath.html) function, which get the path to `net.exe` without assuming it is in the user's `PATH` environment variable.
+ 
+### Users and Groups
+
+ * [Test-Identity](http://get-carbon.org/help/Test-Identity.html) no longer writes an error if it can't find a fully-qualified local user, e.g. `$env:COMPUTERNAME\Username`.
 
  
 # 1.0.0 (6 March 2013)
